fix dark mode

--- a/src/styles/dot.css
+++ b/src/styles/dot.css
@@ -1,6 +1,6 @@
 html.dark {
-  --dot-bg-color: #050505;
-  --dot-color: #2f353c;
+  --dot-bg-color: #111010;
+  --dot-color: #282727;
   --dot-mask-color: #000000;
 }
 
